Fixing header with status bar on ios fullscreen app mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,11 +41,11 @@ body {
 /* header styling */
 #header {
     background: #f5f5f5;
-    height: 40px;
+    height: 60px;
 }
     #header .site-title {
         font-size: 26px;
-        line-height: 40px;
+        line-height: 60px;
         margin: 0;
         text-align: center;
     }
